[gd_scene load_steps=4 format=3 uid="uid://dgxljpyatnw2b"]

[ext_resource type="Texture2D" uid="uid://btqflek41ufei" path="res://sprites/save popup.png" id="1_4vkap"]
[ext_resource type="Script" uid="uid://bmqcnrv2qhy54" path="res://Scripts/Save.gd" id="2_xv22b"]
[ext_resource type="FontFile" uid="uid://dptwnn44g2d31" path="res://Fonts/ComicNeue-Bold.ttf" id="3_3ways"]

[node name="SavePopup" type="Sprite2D"]
visible = false
texture = ExtResource("1_4vkap")
script = ExtResource("2_xv22b")

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -49.0
offset_right = -4.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_3ways")
theme_override_font_sizes/font_size = 11
text = "Aye, you wanna save?"
horizontal_alignment = 1
autowrap_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -46.0
offset_right = -20.0
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 0

[node name="Yes" type="Button" parent="HBoxContainer"]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_right = NodePath("../No")
theme_override_font_sizes/font_size = 8
text = "YES"
flat = true

[node name="No" type="Button" parent="HBoxContainer"]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_left = NodePath("../Yes")
theme_override_font_sizes/font_size = 8
text = "no"
flat = true

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="HBoxContainer/Yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="HBoxContainer/No" to="." method="_on_no_pressed"]
